<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/course_rl_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/course_gray_step0" >

    <LinearLayout
        android:id="@+id/course_ll_top"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@color/black"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/course_tv_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/course_top"
            android:textColor="@color/white"
            android:textSize="@dimen/course_tv_top" />
    </LinearLayout>

     <ImageView
        android:id="@+id/course_iv_wifi"
        android:layout_width="fill_parent"
        android:layout_height="400dp"
        android:layout_below="@id/course_ll_top"
     	android:contentDescription="@string/hello_world"
        android:src="@mipmap/course_wifi" />
    
    
    
    <com.howell.ecamerajing.view.MyGifView
        android:id="@+id/my_gif_view"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/course_iv_wifi" />

    
    
    
    <TextView
        android:id="@+id/course_tv_text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/my_gif_view"
       
        android:layout_centerHorizontal="true"
        android:text="@string/course_text1_step0"
        android:textColor="@color/course_text_gray"
        android:textSize="@dimen/course_tv_text" />

    <TextView
        android:id="@+id/course_tv_text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/course_tv_text1"
        android:layout_centerHorizontal="true"
        android:text="@string/course_text2_step0"
        android:textColor="@color/course_text_gray"
        android:textSize="@dimen/course_tv_text" />

    <TextView
        android:id="@+id/course_tv_text3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/course_tv_text2"
        android:layout_centerHorizontal="true"
        android:text=""
        android:textColor="@color/course_text_gray"
        android:textSize="@dimen/course_tv_text" />

    <LinearLayout
        android:id="@+id/course_ll_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="25dp"
        android:orientation="horizontal" >

        <Button 
            android:id="@+id/course_btn_wifi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/course_btn_style_green"
       
            android:text="@string/course_btn_set_wifi"
            android:textColor="@color/white"
            android:textSize="@dimen/course_btn"
            android:layout_marginEnd="@dimen/course_btn_margin"
            android:layout_marginRight="@dimen/course_btn_margin"
            />
        
        
        <Button
            android:id="@+id/course_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/course_btn_style"
            android:text="@string/course_btn_step0"
            android:textColor="@color/white"
            android:textSize="@dimen/course_btn" />
    </LinearLayout>

    <TextView
        android:id="@+id/course_tv_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/course_ll_btn"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:text="@string/course_ask_step0"
        android:textColor="@color/course_text_gray"
        android:textSize="@dimen/course_tv_ask" />

   
</RelativeLayout>