<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.SettingActivity" >

    <LinearLayout
        android:id="@+id/setting_wifi_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/setting_ll_style"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/setting_wifi_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:text="@string/setting_wifi"
            android:textColor="@color/black"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/setting_time_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/setting_ll_style"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/setting_time_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:text="@string/setting_time"
            android:textColor="@color/black"
            android:textSize="18sp" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/setting_state_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/setting_ll_style"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/setting_state_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerInParent="true"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:text="@string/setting_state"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <Switch
            android:id="@+id/setting_state_sw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:textOff="@string/setting_switch_off"
            android:textOn="@string/setting_switch_on" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        
         >

        <Button
            android:id="@+id/button_test"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:textSize="15sp"
            android:layout_alignParentLeft="true"
        	android:layout_alignParentStart="true"
        	android:layout_centerHorizontal="true"
            android:text="@string/setting_clean_cach" />
        
        <TextView 
            android:id="@+id/setting_tv_cach"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"
          	android:layout_alignParentRight="true"
          	android:layout_alignParentEnd="true"
          	android:layout_centerInParent="true"
          	android:textSize="18sp"
            android:text="0.00M"
            
            
            />
        
        
    </RelativeLayout>

</LinearLayout>